--- a/pom.xml
+++ b/pom.xml
@@ -424,10 +424,32 @@
       <version>1.4.1</version>
     </dependency>
 
+    <!--
+     See
+     https://broadworkbench.atlassian.net/browse/DCJ-274
+     org.bouncycastle:bcprov-jdk18on:jar:1.76 is vulnerable
+    -->
     <dependency>
       <groupId>com.sendgrid</groupId>
       <artifactId>sendgrid-java</artifactId>
       <version>4.10.2</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.bouncycastle</groupId>
+          <artifactId>bcprov-jdk18on</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <!--
+     See
+     https://broadworkbench.atlassian.net/browse/DCJ-274
+     org.bouncycastle:bcprov-jdk18on:jar:1.76 is vulnerable
+    -->
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk18on</artifactId>
+      <version>1.78.1</version>
     </dependency>
 
     <dependency>
